# cowfetch

./: .gitignore  README.md  enable-ansi.ps1  install.ps1  pokemonfetch.ps1  profile-setup.ps1  pyproject.toml
cowfetchpy/: display.py  main.py  parser.py
cowfetchpy/cows/: falco.cow
