[project]
name = "cowfetchpy"
version = "0.1.0"
description = "A Python version of cowfetch, displaying ASCII art cows (and other creatures) in the terminal."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Arman Rafiee", email = "aran.rafiee@gmail.com" },
]
dependencies = [
  "colorama>=0.4.6",
]

[project.scripts]
cowfetchpy = "cowfetchpy.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 